<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".presentation.facts.FactsActivity">

    <include
            android:id="@+id/loadingErrorView"
            layout="@layout/loading_error_view"
            android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/factsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/fact_item"/>

</androidx.constraintlayout.widget.ConstraintLayout>