<resources>
    <string name="app_name">Chuck Norris Facts</string>
    <string name="search">Search</string>
    <string name="search_facts">Search Facts</string>
    <string name="search_hint">Enter your search term</string>
    <string name="suggestions_title">Suggestions</string>
    <string name="past_searches_title">Past Searches</string>
    <string name="uncategorized">UNCATEGORIZED</string>
    <string name="no_internet_message">No Internet Connection</string>
    <string name="no_results">No results found for the term</string>
    <string name="share_on">Share on</string>
</resources>
